VDR Plugin 'elvis' Revision History
------------------------------------

2010-08-13: Version 0.0.1

- Initial revision.

2010-08-20: Version 0.0.2

- Added support for Saunavisio.
- Moved all setup options into separate 'elvis.conf' file.
- Fixed localization in setup inputs.
- Added a validation for non-empty username and password
  for the main menu entry.
- Tweaked ringbuffer limits.

2010-10-03: Version 0.0.3

- Added confirmation prompts for deletions.
- Added a setup option for secure connections.
- Fixed a translation typo (Thanks to Antti Seppälä).
- Optimized skipping by reusing existing CURL connection
  (Thanks to Antti Seppälä).
- Fixed CURL multithreading issues (Thanks to Antti Seppälä).
- Added missing replaying status changes.
- Tweaked skip durations of green/yellow (+-60s) and 1/3
  (+-20s) keys in replaying mode.
- Mapped 4/6 (+-5min) and 7/9 (+-15min) keys for longer
  skips in replaying mode.

2010-xx-xx: Version 0.0.4

- Added functionality to abort current fetching.
- Added 'ABRT' and 'LIST' commands for SVDRP interface.